# HCP

./: .gitignore  Analysis.ipynb  README.md
data/: 2023 HCP Case Data - Sheet1.csv  cleaned_data.csv  cleaned_data.pkl  prepared_kmeans_data.pkl
hcp_churn_analysis/: README.md  pyproject.toml
hcp_churn_analysis/src/hcp_churn_analysis/: crew.py  main.py
notebooks/: Acquisition Analysis.ipynb  Data Cleaning.ipynb  Enroll Plan Analysis.ipynb  Industry Analysis.ipynb  OrgSize Analysis.ipynb  Promo Analysis.ipynb  churn_prediction.ipynb  churn_prediction_model.json  clustering.ipynb  overall_eda.ipynb
