[project]
name = "hcp_churn_analysis"
version = "0.1.0"
description = "hcp_churn_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
hcp_churn_analysis = "hcp_churn_analysis.main:run"
run_crew = "hcp_churn_analysis.main:run"
train = "hcp_churn_analysis.main:train"
replay = "hcp_churn_analysis.main:replay"
test = "hcp_churn_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
